z-index fix

--- a/css/napster.css
+++ b/css/napster.css
@@ -200,7 +200,7 @@ body
 	width				: 97.3%;
 	height				: 50px;
 	top					: 50px;
-	z-index				: 1000;
+	z-index				: 100;
 }
 #player:after {
 	top					: 0px;
